# minera

./: .gitignore  CLAUDE.md  CMakeLists.txt  DEPLOYMENT.md  LICENSE  README.md  fix_all_examples.sh  render_all_videos.sh  run_all_examples.sh  run_quick_examples.sh  test_overlaps.cpp
.github/workflows/: ci.yml  pages.yml
docs/: README.md  SITE_OVERVIEW.md  index.html  research.md  roadmap.md  skeleton.md
docs/css/: style.css
docs/js/: main.js  simulation.js
examples/: README.md  benchmark_nlist.cpp  example_avalanche.cpp  example_collision.cpp  example_crystal.cpp  example_domino_chain.cpp  example_double_helix.cpp  example_fountain.cpp  example_gas_expansion.cpp  example_gravity_well.cpp  example_highdrop.cpp  example_md_large.cpp  example_multiscale.cpp  example_newtons_cradle.cpp  example_orbital_ring.cpp  example_vortex.cpp  example_wave.cpp  minerva_demo.cpp
modules/md/: md_system.cpp  md_system.hpp
modules/rb/: rigid_body_system.cpp  rigid_body_system.hpp
simcore/: world.hpp
simcore/base/: log.hpp
simcore/io/: csv_writer.cpp  csv_writer.hpp  vtk_writer.cpp  vtk_writer.hpp  writer.hpp
simcore/math/: vec3.hpp
simcore/scheduler/: scheduler.hpp
simcore/spatial/: neighbor_list.cpp  neighbor_list.hpp
simcore/state/: particle.hpp  rigid_body.hpp
simcore/utils/: overlap_checker.hpp
tools/: README.md  batch_render.py  quick_render.py  render  render_paraview.py  visualize.py
